# PointCloud-MachineLearning

./: README.md
.catkin_tools/profiles/default/: build.yaml
Segmented_Cloud/: segmented_cloud0.pcd  segmented_cloud1.pcd  segmented_cloud10.pcd  segmented_cloud11.pcd  segmented_cloud12.pcd  segmented_cloud13.pcd  segmented_cloud14.pcd  segmented_cloud15.pcd  segmented_cloud16.pcd  segmented_cloud17.pcd  segmented_cloud2.pcd  segmented_cloud3.pcd  segmented_cloud4.pcd  segmented_cloud5.pcd  segmented_cloud6.pcd  segmented_cloud7.pcd  segmented_cloud8.pcd  segmented_cloud9.pcd
data/: 1.pcd  2.pcd  3.pcd  4.pcd  kinect_original.pcd  result  rtabmap_trajectory.txt
scripts/: Cluster_extract.py  User_Interface.py  VTKPointcloud.py  classifierNode.py  mainwindow.py  mainwindow.ui  test.py  trainer.py  visualizer.py
scripts/Segmented/: apple_1_1_2.pcd  banana_1_1_2.pcd  bowl_1_1_2.pcd  car_1_1_182.pcd  car_1_1_96257.pcd  segmented_cloud.pcd  segmented_cloud0.pcd  segmented_cloud1.pcd  segmented_cloud10.pcd  segmented_cloud11.pcd  segmented_cloud12.pcd  segmented_cloud13.pcd  segmented_cloud14.pcd  segmented_cloud15.pcd  segmented_cloud16.pcd  segmented_cloud17.pcd  segmented_cloud18.pcd  segmented_cloud19.pcd  segmented_cloud2.pcd  segmented_cloud3.pcd  segmented_cloud4.pcd  segmented_cloud5.pcd  segmented_cloud6.pcd  segmented_cloud7.pcd  segmented_cloud8.pcd  segmented_cloud9.pcd
scripts/python_pcl/: setup.py
scripts/python_pcl/pcl/: pcl_visualization.cpp
scripts/robot_vision_helper/: CNNModel.py  DataHandler.py  common_constants.py
src/3DCNN/: CMakeLists.txt  package.xml
src/3DCNN/Segmented_Cloud/: segmented_cloud0.pcd  segmented_cloud1.pcd  segmented_cloud10.pcd  segmented_cloud11.pcd  segmented_cloud12.pcd  segmented_cloud13.pcd  segmented_cloud14.pcd  segmented_cloud15.pcd  segmented_cloud16.pcd  segmented_cloud17.pcd  segmented_cloud18.pcd  segmented_cloud19.pcd  segmented_cloud2.pcd  segmented_cloud20.pcd  segmented_cloud21.pcd  segmented_cloud22.pcd  segmented_cloud23.pcd  segmented_cloud24.pcd  segmented_cloud25.pcd  segmented_cloud26.pcd  segmented_cloud27.pcd  segmented_cloud28.pcd  segmented_cloud29.pcd  segmented_cloud3.pcd  segmented_cloud30.pcd  segmented_cloud31.pcd  segmented_cloud32.pcd  segmented_cloud33.pcd  segmented_cloud34.pcd  segmented_cloud35.pcd  segmented_cloud36.pcd  segmented_cloud37.pcd  segmented_cloud38.pcd  segmented_cloud39.pcd  segmented_cloud4.pcd  segmented_cloud40.pcd  segmented_cloud41.pcd  segmented_cloud42.pcd  segmented_cloud43.pcd  segmented_cloud44.pcd  (+22 more)
src/3DCNN/header/: obj_detector.h  robot_vision_common.h  svm_trainer.h
src/3DCNN/src/: classifier.cpp  descriptors.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  obj_detector.cpp  robot_vision_common.cpp  segmentation.cpp
src/3D_object/src/: obj_detector.cpp  robot_vision_common.cpp
src/cloudsegment/: CMakeLists.txt  package.xml
src/cloudsegment/include/cloudsegment/: segmentation.h
src/cloudsegment/src/: cloud_segmenter.cpp  main.cpp
src/pcd_capture/: CMakeLists.txt
src/pcd_capture/include/pcd_capture/: classifier.h  cloudcapture.h  segmentation.h  svm_trainer.h  viewer.h
src/pcd_capture/include/pcd_capture/rtabmap/core/: Version.h
src/pcd_capture/src/: classifier.cpp  cloudcapture.cpp  cloudcapture.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mesh2pcd.cpp  segmentation.cpp  svm_trainer.cpp  viewer.cpp  viewer.h  viewer.ui
src/python-pcl/python_pcl.egg-info/: PKG-INFO  SOURCES.txt
